fix: fixes tabs section alignment

--- a/mock-4/private/styles/section.scss
+++ b/mock-4/private/styles/section.scss
@@ -112,4 +112,16 @@
   &_vertical {
     flex-direction: column;
   }
+
+  &__element {
+    &_middle {
+      align-self: center;
+    }
+
+    &_indent {
+      &_top {
+        margin-top: 10px;
+      }
+    }
+  }
 }
